# work-stealing-thread-pool

./: CMakeLists.txt  main.cpp  tests.cpp
include/: thread_pool.hpp
include/internal/: tp_queue.hpp
